# scion

./: go.mod  go.sum  go_deps.bzl
nat-sim-config/: scion-dc.yml
nat-sim-tester/: BUILD.bazel
router/: BUILD.bazel  dataplane.go
