load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "stunc.go",
        "stund.go",
        "test-client.go",
        "test-server.go",
    ],
    importpath = "github.com/scionproto/scion/nat-sim-tester",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/snet:go_default_library",
        "@com_tailscale//net/stun:go_default_library",
        "@com_tailscale//net/stunserver:go_default_library",
        "@com_tailscale//tsweb:go_default_library",
    ],
)

go_binary(
    name = "nat-sim-tester",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
